[Title] fixed spacing issue

--- a/wp-content/themes/splash/assets/sass/_global.scss
+++ b/wp-content/themes/splash/assets/sass/_global.scss
@@ -362,6 +362,7 @@ section {
 				width: 100%;
 				padding-left: 100px;
 				justify-content: flex-start;
+				margin: 0;
 			}
 			.content {
 				margin: 0;
